test/conformance/chainsaw/deferred/resolve-overriden-variable/resource-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: one
data:
  one: foo
