test/conformance/chainsaw/deferred/resolve-overriden-variable/02-resource.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resource
spec:
  timeouts: {}
  try:
  - apply:
      check: null
      file: resource.yaml
  - assert:
      file: resource-assert.yaml
