test/conformance/chainsaw/deferred/resolve-overriden-variable/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: resolve-overriden-variable
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: one
  - name: step-02
    try:
    - apply:
        file: resource.yaml
    - assert:
        file: resource-assert.yaml
